# esp32s3_watch

./: .gitignore  AGENTS.md  CHINESE_FONT_GUIDE.md  DEBUG_GUIDE.md  build_and_flash.sh  ecosystem.config.js  package.sh  quick_build.sh  sdkconfig  sdkconfig.bak2  sdkconfig.bak3  sdkconfig.bak4  sdkconfig.bak6
.cache/clangd/index/: animimg001.c.CF2B1353B333C342.idx  animimg002.c.9557D2CB6609E422.idx  animimg003.c.D6B4036C89105C5F.idx  bluetooth.c.A799F4DE55392E8E.idx  bluetooth.h.7814005334A0CD3E.idx  board_config.h.6C8DADC2524A5B63.idx  display.c.EBD200CC39E3C204.idx  display.h.68DDB92C33FC1DCD.idx  display_driver.c.65F4F1B69BA4D23D.idx  display_driver.h.3C1330BC4B84B3A4.idx  event_bus.c.00AF45BFAACDB5D7.idx  event_bus.h.441A9A8F956D8A06.idx  gifdec.c.D7DD2B5FF84A1439.idx  gifdec.h.6D5C4FE47144833B.idx  img_bulb_gif.c.DD509BDACF139A8A.idx  img_caret_down.c.8DEC87D57FBAE3D5.idx  img_cogwheel_alpha16.c.33C629F55DBBC908.idx  img_cogwheel_argb.c.D52453721961884A.idx  img_cogwheel_chroma_keyed.c.D8DC4564AC59D125.idx  img_cogwheel_indexed16.c.C9B6914D875848D8.idx  img_cogwheel_rgb.c.F7047899FCE95B13.idx  img_emoji_F617.c.FBACE6CD25D6F10C.idx  img_hand.c.D9F82E87F424E091.idx  img_skew_strip.c.668F4FC7D0AD792C.idx  img_star.c.AEA3CFD00EF811A5.idx  img_wink_png.c.97028D2565ECD0F4.idx  imgbtn_left.c.A7E8C386409D4D98.idx  imgbtn_mid.c.D3DC4A88C914318A.idx  imgbtn_right.c.B0C8851811D9602E.idx  imu_driver.c.0B8D142B5D266F82.idx  imu_driver.h.D8AEF3FDC0FD7A38.idx  input.c.42E19ED71BB28CB5.idx  input.h.FFFBDD39A9C7EEB6.idx  lodepng.c.2D8471F9BEEB0CD2.idx  lodepng.h.5DFC75809E750ECA.idx  lv_anim.c.8773B60F20036019.idx  lv_anim.h.2A31A4EA5DB9E485.idx  lv_anim_timeline.c.DF6E8FBEA39A85FE.idx  lv_anim_timeline.h.C1EE84EDF8A78111.idx  lv_animimg.c.3C24DC5F171655F5.idx  (+528 more)
.github/workflows/: build.yml  release.yml
config/: hardware_pins.h  system_config.h
docs/: EMOTIONAL_COMFORT_DESIGN.md
include/: board_config.h
main/: CMakeLists.txt  display.c  display_test.c  display_test.h  idf_component.yml  lvgl_port.c  lvgl_port.h  lvgl_test.c  lvgl_test.h  main.c  partitions.csv  simple_test.c  simple_test.h
main/comfort/: breathing.c  breathing.h  emergency.c  emergency.h  messages.c  messages.h
main/core/: event_bus.c  event_bus.h  power_manager.c  power_manager.h
main/drivers/: battery_driver.c  battery_driver.h  cst816_touch.c  cst816_touch.h  display_driver.c  display_driver.h  i2s_audio.c  i2s_audio.h  imu_driver.c  imu_driver.h  touch_driver.c  touch_driver.h
main/fonts/: chinese_16.c  chinese_16.h  chinese_16_simple.c
main/services/: ble_notify.c  ble_notify.h  imu_task.c  imu_task.h  motion_detect.c  motion_detect.h  time_service.c  time_service.h  time_update.c  time_update.h
main/ui/: hw_tests.c  hw_tests.h  test_battery.c  test_display.c  test_imu.c  test_menu.c  test_menu.h  test_touch.c  voice_recorder.c  voice_recorder.h  watch_face.c  watch_face.h  watch_face_chinese.c  watch_face_chinese.h  watch_face_ui.c  watch_face_ui.h
tools/: gen_chinese_font.py  generate_chinese_font.sh
